# OpenABM

./: .dockerignore  .env.example  .gitignore  HANDOFF.md  IMPLEMENTATION_PROGRESS.md  LICENSE  Makefile  README.md  SPEC_EDIT_SUGGESTIONS.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
deploy/: compose.yaml  production.env.example  python.Dockerfile  web.Dockerfile
docs/: deployment.md  synthetic-pilot.md  ux-direction.md
docs/decisions/: 0006-agent-orchestration-framework.md
evals/golden-fixtures/: trace_fixtures.json
governance/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
governance/decisions/: 000-template.md  001-local-development-storage.md  002-model-runtime-adapter-strategy.md  003-search-implementation.md  004-code-judge-sandbox.md  005-local-stack-runner.md  006-similarity-experiments.md  007-production-reference-deployment.md  008-license-selection.md
infra/migrations/: 0001_initial.sql  0002_v2_entities.sql  0003_eval_runs.sql  0005_privacy_ops.sql  0006_prompt_config_registry.sql  0007_automations.sql  0008_grounding_novelty.sql  0009_judge_registry.sql  0010_grounding_model_extractions.sql  0011_auth_identity.sql  0012_secret_management.sql  0013_observability.sql  0014_issue_links.sql  0015_mcp_tool_observability.sql  0016_grounding_model_adjudications.sql  0017_similarity_vectors.sql  0018_auth_invite_deliveries.sql  0019_agent_config_tag_events.sql  0020_now_events.sql
scripts/: check_docs_links.py  deployment_smoke.py  openabm
(+59 files in other folders)
