[project]
name = "openabm-dev"
version = "0.0.0"
description = "Development workspace for OpenABM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jsonschema>=4.23.0",
  "langgraph>=1.0,<2.0",
  "pydantic>=2.9.0",
  "python-multipart>=0.0.9",
  "rich>=13.9.0",
  "typer>=0.12.5",
  "uvicorn>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "apps/api/src",
  "apps/worker/src",
  "apps/mcp-server/src",
  "packages/python-sdk/src",
  "packages/cli/src",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"apps/api/src/openabm_api/main.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
